--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.10.2",
-    "react-router": "^6.22.3"
+    "react-router": "^6.22.3",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
