--- a/package.json
+++ b/package.json
@@ -12,21 +12,28 @@
   "dependencies": {
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.10.2",
     "react-router": "^6.22.3",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "typescript-cookie": "^1.0.6",
+    "typescript-plugin-css-modules": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
     "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
