--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router": "^6.22.3",
     "sass": "^1.77.2",
     "typescript-cookie": "^1.0.6",
-    "typescript-plugin-css-modules": "^5.1.0"
+    "typescript-plugin-css-modules": "^5.1.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
